# astriveil

./: .env  Cargo.toml  build.rs  handshake.txt
blockbench/: .xdp-zimzam.bbmodel-TOpr4K
client/: gamecontroller.rs  lib.rs  screendisplay.rs
client/gameloop/: entitybin.rs  mod.rs  world.rs
client/interface/: buttons.rs  mod.rs  uictx.rs
client/interface/pages/: main_screen.rs
client/meshing/: mesher.rs  mod.rs
client/meshing/vertex/: chunk_vertex.rs  mod.rs  surface_vertex.rs
client/network/: mod.rs  netmanager.rs
client/nominal/: camera.rs
client/plantain/: mod.rs  render_pipeline.rs  render_queue.rs
client/plantain/elements/: element.rs  frame.rs  image_frame.rs  mod.rs  screen.rs  text_button.rs  textbox.rs  textlabel.rs  uianim.rs
client/plantain/vertices/: image_vertex.rs  mod.rs  ui_vertex.rs
client/renderer/: mod.rs  renderer.rs  skinned_model_pipeline.rs  terrain_pipeline.rs
res/client/data/: model_manifest.json  texture_manifest.json
res/client/models/: zimzam.gltf
res/client/shaders/: chunk_shader.wgsl  color_shader.wgsl  image_shader.wgsl  skinned_model_shader.wgsl
server/: game_controller.rs  lib.rs
server/network/: logic.rs  mod.rs  network.rs
shared/: lib.rs  message.rs  util.rs
shared/blocks/: block.rs
shared/loaders/: animator.rs  mod.rs  model_bin.rs  modelvertex.rs  texture.rs  texture_bin.rs  vertex.rs
shared/world/: chunk.rs  mod.rs
shared/world/entities/: entity.rs  mod.rs  zimzam.rs
